[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-benchmark"
version = "0.2.0"
description = "LLM inference benchmark with OpenAI API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "faker>=37.8.0",
    "openai>=1.108.1",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
notebooks = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
dev = [
    "matplotlib>=3.10.6",
    {include-group = "notebooks"},
]
